--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "agile": "^0.0.2",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.7"
   },
