--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.7"
+    "mongoose": "^5.10.7",
+    "mongoose-type-email": "^1.0.13"
   },
   "devDependencies": {},
   "scripts": {
